k8s/gestionepagamenti.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionepagamenti-db
  labels:
    app: gestionepagamenti
spec:
  selector:
    matchLabels:
      app: gestionepagamenti
      tier: pay-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gestionepagamenti
        tier: pay-mysql
    spec:
      containers:
      - image: mysql:5.7
        name: pay-mysql
        args: ["mysqld", "--default-authentication-plugin=mysql_native_password", "--explicit_defaults_for_timestamp=1"]
        ports:
          - containerPort: 3306
            name: gp-db-port
        readinessProbe:
          exec:
            command:
              - mysqladmin
              - ping
          initialDelaySeconds: 30
          timeoutSeconds: 3
        livenessProbe:
          exec:
            command: 
              - mysqladmin
              - ping
          initialDelaySeconds: 30
          timeoutSeconds: 3
        volumeMounts:
          - mountPath: /docker-entrypoint-initdb.d
            name: mysql-initdb
          - mountPath: /var/lib/mysql
            name: gestionepagamenti-db-volume
      volumes:
        - name: gestionepagamenti-db-volume
          persistentVolumeClaim:
            claimName: gestionepagamenti-db-volume
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionepagamenti
  labels:
    app: gestionepagamenti
spec:
  selector:
    matchLabels:
      app: gestionepagamenti
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gestionepagamenti
    spec:
      containers:
        - image: antonioimp/impala_diblasi_gestionepagamenti
          name: gestionepagamenti
          ports:
            - containerPort: 2222
              name: gp-port
          readinessProbe:
            httpGet:
              path: /health/ping
              port: 2222
            initialDelaySeconds: 40
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health/ping
              port: 2222
            initialDelaySeconds: 40
            periodSeconds: 3
