k8s/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafkabroker
spec:
  selector:
    matchLabels:
      app: kafkabroker
  serviceName: "kafkabroker"
  replicas: 1
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: kafkabroker
    spec:
      containers:
        - name: kafkabroker
          image: wurstmeister/kafka:2.11-2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9092
              name: plaintext
            - containerPort: 9999
              name: jmx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: library/zookeeper:3.4.13
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
