k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkabroker
  labels:
    app: kafkabroker
spec:
  ports:
    - port: 9092
      name: plaintext
    - port: 9999
      name: jmx
  selector:
    app: kafkabroker
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  labels:
    app: zookeeper-service
spec:
  ports:
    - port: 2181
      name: zookeeper-port
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: v1
kind: Service
metadata:
  name: gestionepagamenti-db
  labels:
    app: gestionepagamenti
spec:
  ports:
    - port: 3306
      name: gp-db-port
  selector:
    app: gestionepagamenti
    tier: pay-mysql
---
apiVersion: v1
kind: Service
metadata:
  name: gestionepagamenti
  labels:
    app: gestionepagamenti
spec:
  ports:
    - port: 2222
      name: gp-port
  selector:
    app: gestionepagamenti
