k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-header: "Content-Type"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
    - host: clustera.dsbd2021.it
      http:
        paths:
          - path: /payment1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gestionepagamenti
                port:
                  number: 2222
